# 1INF25-2026-1-Programacion-2

./: hola.txt  prueba.txt
Clases/Punteros genéricos/: comentarios.csv
Clases/STL/Archivos/: EmpresasRegistradas (3).csv
Clases/STL/Estantes/Archivos/: Estantes2.csv
Clases/STL/Multas 2025.1/Archivos/: InfraccionesCometidas (5).csv  TablaDeInfracciones (3).csv
Laboratorios 2026.1/Lab 1/Archivos/: Atenciones.csv  Mascotas.csv  Veterinarios.csv
Laboratorios 2026.1/Lab 2/: ER_Final_Dataset_For_Students_Programacion_2.csv
Laboratorios 2026.1/Lab 4/Archivos/: Atenciones1.csv  Atenciones2.csv  numeros1.txt  numeros2.txt
Laboratorios 2026.1/Lab 5/Archivos/: mascotas.csv  vacunasAplicadas.csv
Laboratorios 2026.1/Lab 6/: Atenciones.csv
Laboratorios 2026.1/Lab 7/: utilitarios.txt
Laboratorios 2026.1/Lab 7/ArchivosDeDatos/1992/01/23/: 00.csv  01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  20.csv  21.csv  22.csv  23.csv
Laboratorios 2026.1/Lab 7/ArchivosDeDatos/2026/01/01/: 00.csv  01.csv  02.csv  03.csv  04.csv  05.csv  06.csv  07.csv  08.csv  09.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  (+5 more)
Memoria/Archivos/: Conductores (1).csv
Punteros genéricos/: streamers.csv
STL/Archivos/: VehiculosRegistrados.csv
Sobrecarga/FuentesBiblioteca/: CMakeLists.txt
Sobrecarga/FuentesBiblioteca/MiBiblioteca/: Funciones.cpp  Funciones.h  Sobrecarga.cpp  Sobrecarga.h
Sobrecarga/UnaAplicacionConBibEstatica/: CMakeLists.txt  main.cpp
(+24 files in other folders)
